[package]
authors = ["Koen van Wel <koenvwel@gmail.com>"]
description = "Rust library for creating and parsing launchd files"
edition = "2018"
keywords = ["launchd", "schedule", "repeat", "periodic", "macOS"]
license = "MIT"
name = "launchd"
readme = "README.md"
repository = "https://github.com/koenichiwa/launchd"
version = "0.2.0"

[package.metadata.cargo-all-features]
skip_feature_sets = [["io", "serde"], ["io", "plist"]]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["io"]
io = ["serde", "plist"]

[dependencies]
cron = {version = "0.9", optional = true}
plist = {version = "1", optional = true}
readonly = "0.2"
serde = {version = "1.0", features = ["derive"], optional = true}
thiserror = "1.0"
