[package]
name = "launchd"
version = "0.3.0"
authors = ["Koen van Wel <koenvwel@gmail.com>"]
description = "Rust library for creating and parsing launchd files"
edition = "2018"
keywords = ["launchd", "schedule", "repeat", "periodic", "macOS"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/koenichiwa/launchd"


[package.metadata.cargo-all-features]
skip_feature_sets = [["io", "serde"], ["io", "plist"]]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["io"]
io = ["serde", "plist"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
plist = { version = "1", optional = true }
cron = { version = "0.12", optional = true }
thiserror = "1.0"
